# dataxid-python

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
dataxid/: __init__.py  _log.py  _pk.py  _table.py  exceptions.py
dataxid/client/: __init__.py  _http.py  _serialization.py
dataxid/encoder/: __init__.py  _builtin.py  _nn.py  _ports.py  _wrapper.py
dataxid/pipeline/: __init__.py  _analyze.py  _decode.py  _encode.py  _privacy.py  _transform.py
dataxid/training/: __init__.py  _config.py  _frozen.py  _model.py  _seed.py
examples/: advanced_generation.py  conditional_generation.py  imputation.py  multitable.py  quickstart.py
tests/sdk/: conftest.py  test_async_polling.py  test_client.py  test_decode.py  test_encoder.py  test_exceptions.py  test_logging.py  test_model.py  test_model_config.py  test_pk.py  test_quota_error.py  test_serialization.py  test_synthesize_tables.py  test_validation_boundary.py
