[project]
name = "dataxid"
version = "0.3.0"
description = "The Synthetic Data API — privacy-preserving synthetic data generation"
authors = [{ name = "Dataxid", email = "dev@dataxid.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "Apache-2.0"
keywords = ["synthetic-data", "privacy", "machine-learning", "differential-privacy", "privacy-by-architecture"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "httpx>=0.27.0",
    "pandas>=2.2.0",
    "pyarrow>=13.0.0",
    "torch>=2.9.0,<2.10.0",
    "numpy>=2.0.0",
    "typing-extensions>=4.5",
]

[project.urls]
Homepage = "https://dataxid.com"
Documentation = "https://docs.dataxid.com"
Repository = "https://github.com/dataxid/dataxid-python"
Issues = "https://github.com/dataxid/dataxid-python/issues"
Changelog = "https://github.com/dataxid/dataxid-python/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.5",
    "ruff>=0.9.0",
    "pyright>=1.1.390",
]

[tool.uv]
default-groups = ["dev"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dataxid"]
[tool.hatch.build.targets.wheel.force-include]
"dataxid/py.typed" = "dataxid/py.typed"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "I",      # isort
    "F",      # pyflakes
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "B",      # bugbear
    "UP",     # pyupgrade
    "ARG",    # unused arguments
    "T201",   # print statements
]

[tool.ruff.lint.isort]
known-first-party = ["dataxid"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG001",
    "ARG002",
    "ARG004",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-n auto --tb=short"
xfail_strict = true

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
include = ["dataxid"]
exclude = ["build", "dist"]
